syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.student;

import "ClassesDefinitions.proto";

// Student -> ClassServer Service

message ListClassRequest {
  int32 versionNumber = 1;
}

message ListClassResponse {
  ResponseCode code = 1;
  ClassState classState = 2;
  int32 versionNumber = 3;
}

message EnrollRequest {
  Student student = 1;
}

message EnrollResponse {
  ResponseCode code = 1;
  int32 versionNumber = 2;
}

service StudentService {
  rpc listClass(ListClassRequest) returns (ListClassResponse);
  rpc enroll(EnrollRequest) returns (EnrollResponse);
}
